# Learning-about-MCP

./: .gitignore  Makefile  README.md  docker-compose.yml
1-llm/: README.md  pull_models.sh
2-server/: Dockerfile  README.md  SECURITY_ARCHITECTURE.md  config.yaml  pyproject.toml
2-server/mcp_server/: main.py  models.py  resources.py
2-server/mcp_server/config/: __init__.py  settings.py
2-server/mcp_server/core/: app.py
2-server/mcp_server/providers/: base.py  manager.py  ollama.py
2-server/mcp_server/security/: __init__.py  audit.py  auth.py  interceptor.py  rate_limiter.py
2-server/mcp_server/tools/: llm.py  util.py  weather.py
2-server/tests/: test_chat_service.py  test_concurrency.py  test_config_validation.py  test_fastmcp.py  test_rate_limit_identity.py
3-client/: README.md  chat_service.py  client_app.py  credentials.py
